--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -63,7 +63,7 @@ fieldset.switch_wrapper {
       display: none;
 
       &:checked+label {
-        background-color: #fff;
+        background-color: $colorWhite;
         color: $accentColor;
       }
     }
@@ -76,7 +76,7 @@ fieldset.switch_wrapper {
 
       transition: color .3s, background-color .3s;
       margin: 0;
-      border: 1px solid #fff;
+      border: 1px solid $colorWhite;
       border-left: 0;
 
       cursor: pointer;
@@ -87,14 +87,14 @@ fieldset.switch_wrapper {
       font-weight: normal;
 
       &:first-of-type {
-        border-left: 1px solid #fff;
+        border-left: 1px solid $colorWhite;
       }
     }
   }
 }
 
 // (submit-) Button
-button {
+button[type="submit"] {
   transition: color .3s ease-in-out, background-color .3s ease-in-out;
   margin-top: 16px;
   border: 1px solid #333;
@@ -106,7 +106,7 @@ button {
   &:hover {
     outline: none;
     background-color: #333;
-    color: #fff;
+    color: $colorWhite;
   }
 }
 
@@ -117,10 +117,10 @@ button {
 //table-of-contents
 .table-of-contents-card {
   background: $primaryColor;
-  color: #fff;
+  color: $colorWhite;
 
   .icon-card__title:before {
-    border-bottom-color: #fff;
+    border-bottom-color: $colorWhite;
   }
 
   .icon-card__body {
@@ -136,7 +136,7 @@ button {
 
         a {
           text-decoration: underline;
-          color: #fff;
+          color: $colorWhite;
         }
       }
     }
@@ -188,7 +188,7 @@ button {
 
 .first-steps-card {
   .link-wrapper a {
-    color: #fff;
+    color: $colorWhite;
   }
 }
 
@@ -196,10 +196,10 @@ button {
 .contact-card {
   .icon-card__content {
     background-color: $accentColor;
-    color: #fff;
+    color: $colorWhite;
 
     .icon-card__title:before {
-      border-bottom-color: #fff;
+      border-bottom-color: $colorWhite;
     }
 
     form {
@@ -221,11 +221,11 @@ button {
       }
 
       button {
-        border-color: #fff;
-        color: #fff;
+        border-color: $colorWhite;
+        color: $colorWhite;
 
         &:hover {
-          background-color: #fff;
+          background-color: $colorWhite;
           color: $accentColor;
         }
       }
@@ -241,16 +241,16 @@ button {
 .eMail-card {
   .icon-card__content {
     background: #e25617;
-    color: #fff;
+    color: $colorWhite;
 
     .icon-card__title:before {
-      border-bottom-color: #fff;
+      border-bottom-color: $colorWhite;
     }
   }
 
   a {
     text-decoration: underline;
-    color: #fff;
+    color: $colorWhite;
 
     &:hover {
       color: $accentColor;
