--- a/static/styles/help/icon-link-group.scss
+++ b/static/styles/help/icon-link-group.scss
@@ -3,7 +3,7 @@
 .link-wrapper {
   height: 5rem;
 
-  a {
+  .icon-link {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,7 +11,7 @@
     text-decoration: none;
     color: #333;
 
-    span {
+    .icon-wrapper {
       transition: all .2s ease-in-out;
       padding: 0 8px;
     }
@@ -25,7 +25,7 @@
     &:focus {
       outline: none;
 
-      span {
+      .icon-wrapper {
         transform: scale(1.1);
         text-shadow: 0 2px 5px rgba(51, 51, 51, .2);
       }
