--- a/static/styles/help/search.scss
+++ b/static/styles/help/search.scss
@@ -39,7 +39,7 @@
     z-index: 9999;
     border: 1px solid $primaryColor;
     border-radius: 4px;
-    background: #fff;
+    background: $colorWhite;
     padding: 8px;
     width: 100%;
     max-height: 25rem;
