improved some wording

--- a/views/news/overview.hbs
+++ b/views/news/overview.hbs
@@ -7,7 +7,7 @@
             </div>
             {{#userHasPermission "SCHOOL_NEWS_EDIT"}}
                 <a href="/news/new" class="btn btn-primary btn-add create pull-right mb-1">
-                    <i class="fa fa-plus" aria-hidden="true"></i> News hinzufügen
+                    <i class="fa fa-plus" aria-hidden="true"></i> Neuigkeit hinzufügen
                 </a>
             {{/userHasPermission}}
         </div>
