added extra buttons

--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -33,6 +33,9 @@
                           title="Thema löschen">
                           <i class="fa fa-trash-o"></i>
                         </a>
+                        <a href="/courses/{{../courseId}}/topics/{{../_id}}/edit" class="btn btn-secondary btn-sm btn-icon-card" title="Thema bearbeiten">
+                          <i class="fa fa-pencil"></i>
+                        </a>
                         <a href="#" data-href="{{../_id}}" data-courseId="{{../courseId}}" class="btn btn-secondary btn-sm btn-create-share btn-icon-card" title="Thema teilen">
                           <i class="fa fa-share-alt"></i>
                         </a>
@@ -58,6 +61,9 @@
                       <div class="right-btn-group">
                         <a class="delete-topic btn btn-secondary btn-sm btn-icon-card" href="/courses/{{../courseId}}/topics/{{../_id}}" target="_blank" data-method="DELETE" data-name="{{../name}}" redirect="/courses/{{../courseId}}" title="Thema löschen">
                           <i class="fa fa-trash-o"></i>
+                        </a>
+                        <a href="/courses/{{../courseId}}/topics/{{../_id}}/edit" class="btn btn-secondary btn-sm btn-icon-card" title="Thema bearbeiten">
+                          <i class="fa fa-pencil"></i>
                         </a>
                         <a href="#" data-href="{{../_id}}" data-courseId="{{../courseId}}" class="btn btn-secondary btn-sm btn-create-share btn-icon-card" title="Thema teilen">
                           <i class="fa fa-share-alt"></i>
