edit and delete events on team page now works

--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -219,6 +219,17 @@
                     {{> "calendar/forms/form-create-event"}}
                 {{/content}}
             {{/embed}}
+
+            {{#embed "lib/components/modal-form" method="put" action="/calendar/events/" class="edit-event-modal"}}
+                {{#content "fields"}}
+                    {{> "calendar/forms/form-create-event" addCourse="true" addTeam="true" collapseIdCourse="4" collapseIdTeam="5"}}
+                {{/content}}
+                {{#content "additional-actions"}}
+                        <button type="button" class="btn btn-primary btn-danger btn-delete">
+                            <i class="fa fa-trash-o"></i> Löschen
+                        </button>
+                {{/content}}
+            {{/embed}}            
         </section>
     {{/content}}
 {{/extend}}
