--- a/views/calendar/card.hbs
+++ b/views/calendar/card.hbs
@@ -27,15 +27,19 @@
 }
 </style>
 
-<div class="events-card col-lg-6 col-xl-4">
+<div data-event="{{json event}}" class="events-card col-lg-6 col-xl-4">
   <div class="card">
     <div class="row row-striped">
       <div class="col-xs-3 text-right date-info">
-        <h1><span class="badge badge-secondary">19</span></h1>
+        <h1><span class="badge badge-secondary">{{event.day}}</span></h1>
         <h3>{{event.month}}</h3>
       </div>
       <div class="col-xs-9">
-        <h4><strong>{{event.title}}</strong></h4>
+        <h4>
+          <strong>{{event.title}}</strong>
+          <i style="cursor: pointer; font-size: 18px" class="ml-1 btn-edit-event fa fa-edit"></i>
+        </h4>
+      
         <ul class="list-inline">
             <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> {{event.dayOfTheWeek}}</li>
           <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> {{event.fromTo}} Uhr</li>
