--- a/views/help/contact.hbs
+++ b/views/help/contact.hbs
@@ -1,5 +1,5 @@
 <div class="contact-form">
-  <p>Wen möchtest du Kontaktieren?</p>
+  <p>Wen möchtest du kontaktieren?</p>
   <fieldset class="switch_wrapper" id="message_target">
     <div class="switch">
       <input type="radio" id="admin" name="message_target" value="admin" checked>
