--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -60,6 +60,10 @@ a[data-toggle="collapse"]:focus{
 	text-decoration:none !important;
 }
 
+img{
+	max-width: 100%;
+}
+
 .btn-link{
 	margin: 0;
 	padding: 0;
@@ -108,13 +112,26 @@ label,
 	display: initial;
 }
 
+[data-toggle="collapse"]{
+	&[aria-expanded="true"] {
+		[data-expand]{
+			display: none;
+		}
+	}
+
+	&[aria-expanded="false"] {
+		[data-collapse]{
+			display: none;
+		}
+	}
+}
+
 .btn-loading {
 	font-size: 0px !important;
 	transition: width 0.3s;
 
 	&:before {
 		content: "\f1ce";
-		-webkit-animation: fa-spin 2s infinite linear;
 		animation: fa-spin 2s infinite linear;
 		font-family: "FontAwesome";
 		display: inline-block;
