--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -10,13 +10,6 @@
         <meta name="apple-mobile-web-app-title" content="{{theme.short_title}}">
         <meta name="theme-color" content="#b10438">
         <meta name="application-name" content="{{theme.short_title}}">
-    {{/block}}
-
-    {{#block "styles"}}
-        <link rel="preload" href="/fonts/ptsans/ptsans-regular.woff" as="font" type="font/woff" crossorigin>
-        <link rel="preload" href="/fonts/ptsans/ptsans-bold.woff" as="font" type="font/woff" crossorigin>
-        <link rel="preload" href="/fonts/ptsans/ptsans-italic.woff" as="font" type="font/woff" crossorigin>
-        <link rel="preload" href="/vendor-optimized/font-awesome/fonts/fontawesome-webfont.woff2?v=4.7.0" as="font" type="font/woff" crossorigin>
         <link rel="mask-icon" href="/images/logo/safari-pinned-tab.svg" color="#b10438">
         <link rel="apple-touch-icon" href= "/images/logo/app-icon-512.png">
         <link rel="apple-touch-icon" sizes="120x120" href="/images/logo/app-icon-120.png">
@@ -27,6 +20,13 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/images/logo/favicon-32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/images/logo/favicon-16.png">
         <link rel="manifest" href="/images/manifest.json">
+    {{/block}}
+
+    {{#block "styles"}}
+        <link rel="preload" href="/fonts/ptsans/ptsans-regular.woff" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="/fonts/ptsans/ptsans-bold.woff" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="/fonts/ptsans/ptsans-italic.woff" as="font" type="font/woff" crossorigin>
+        <link rel="preload" href="/vendor-optimized/font-awesome/fonts/fontawesome-webfont.woff2?v=4.7.0" as="font" type="font/woff" crossorigin>
         <link rel="stylesheet" href="/fonts/ptsans/ptsans.css" />
         <link rel="stylesheet" href="/styles/lib/base.css" />
     {{/block}}
@@ -37,7 +37,7 @@
     {{/block}}
 
 </head>
-<body {{#if inline}}class="window-inline"{{/if}}>
+<body class="{{#if inline}}window-inline{{/if}}">
     {{#block "body"}}{{/block}}
 
     {{#embed "lib/piwik"}}{{/embed}}
