--- a/views/lib/forms/form-contactHPI.hbs
+++ b/views/lib/forms/form-contactHPI.hbs
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label class="control-label" for="title">Danke für dein Feedback, es wird direkt an das Entwicklungsteam der HPI Schul-Cloud gesendet. Bitte achte darauf, keine Passwörter und andere sensible Daten mitzuschicken.</label>
+    <label class="control-label">Danke für dein Feedback, es wird direkt an das Entwicklungsteam der HPI Schul-Cloud gesendet. Bitte achte darauf, keine Passwörter und andere sensible Daten mitzuschicken.</label>
 </div>
 
 <div class="form-group">
@@ -49,7 +49,7 @@
 </div>
 
 <div class="form-group">
-    <select name="category" id="category" data-placeholder="Bereich auswählen (optional)" class="chosen-select" tabindex="-1">
+    <select name="category" id="category" data-placeholder="Bereich auswählen (optional)">
         <option value="dashboard">Übersicht</option>
         <option value="courses">Kurse</option>
         <option value="classes">Klassen</option>
