--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -27,7 +27,7 @@
             <section class="section-chat" style="margin-top: 2rem">
                 <h4>Chat</h4>
                 <div class="rocketchat">
-                    <iframe src="https://open.rocket.chat/channel/general?layout=embedded" frameborder="0"></iframe>
+                    <iframe src="http://dev-rocketchat.schul-cloud.org:3000/channel/general?layout=embedded" frameborder="0"></iframe>
                 </div>
             </section>
 
